{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 66,
  "lineage": "08189e16-c7f2-d251-90d8-a300571640b1",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "Deep-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/publicIPAddresses/dev-vm-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.185.145.35",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-vm-ip",
            "resource_group_name": "az-tf-rg",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "Deep-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/networkInterfaces/dev-nic",
            "internal_domain_name_suffix": "ya4pizdnsqnutadhlvtfuuvdsh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/publicIPAddresses/dev-vm-ip",
                "subnet_id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/dev-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-14-94-0A",
            "name": "dev-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "az-tf-rg",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Compute/virtualMachines/dev-machine"
          },
          "dependencies": [
            "azurerm_public_ip.Deep-ip",
            "azurerm_resource_group.Deep-rg",
            "azurerm_subnet.Deep-subnet",
            "azurerm_virtual_network.Deep-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Deep-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "location": "eastus",
            "name": "dev-nsg",
            "resource_group_name": "az-tf-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "dev-secrule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Deep-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Deep-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg/securityRules/dev-secrule",
            "name": "dev-secrule",
            "network_security_group_name": "dev-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "az-tf-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.Deep-NSG",
            "azurerm_resource_group.Deep-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "Deep-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/publicIPAddresses/dev-vm-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.185.145.35",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-vm-ip",
            "resource_group_name": "az-tf-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Deep-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Deep-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/dev-subnet",
            "name": "dev-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "az-tf-rg",
            "virtual_network_name": "dev-network"
          },
          "dependencies": [
            "azurerm_resource_group.Deep-rg",
            "azurerm_virtual_network.Deep-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "Deep-sg-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/dev-subnet",
            "network_security_group_id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg",
            "subnet_id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/dev-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.Deep-NSG",
            "azurerm_resource_group.Deep-rg",
            "azurerm_subnet.Deep-subnet",
            "azurerm_virtual_network.Deep-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Deep-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "64f43cc0-946d-491b-8067-5d665a52a397",
            "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/virtualNetworks/dev-network",
            "location": "eastus",
            "name": "dev-network",
            "resource_group_name": "az-tf-rg",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/virtualNetworks/dev-network/subnets/dev-subnet",
                "name": "dev-subnet",
                "security_group": "/subscriptions/877089d5-1531-45f7-959d-c56288a5bc1e/resourceGroups/az-tf-rg/providers/Microsoft.Network/networkSecurityGroups/dev-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.Deep-rg"
          ]
        }
      ]
    }
  ]
}